# EchoCampus

./: .gitignore
backend_java/: .gitignore  pom.xml
backend_java/src/main/java/com/echocampus/: EchoCampusApplication.java
backend_java/src/main/java/com/echocampus/controller/: ExpController.java
backend_java/src/main/java/com/echocampus/exception/: BusinessException.java
backend_java/src/main/java/com/echocampus/mapper/: ExpMapper.java
backend_java/src/main/java/com/echocampus/pojo/: Result.java
backend_java/src/main/java/com/echocampus/service/: ExpService.java
backend_java/src/main/java/com/echocampus/service/impl/: ExpServiceImpl.java
backend_java/src/main/java/com/echocampus/utils/: Exp_OSS.java
backend_java/src/main/resources/: application.yml
backend_py/: .gitignore  pyproject.toml  算法后台启动文档.md
backend_py/app/: main.py
backend_py/app/core/: feature_extraction.py
frontend_admin/: package-lock.json
frontend_app/: index.html  package-lock.json  package.json
frontend_app/src/: App.vue  style.css
frontend_app/src/components/: BottomNav.vue
frontend_app/src/views/detail/: LandmarkDetail.vue
frontend_app/src/views/map/: MapPage.vue
frontend_app/src/views/profile/: ProfilePage.vue
frontend_app/src/views/repo/: LandmarkRepo.vue
frontend_app/src/views/search/: SearchPage.vue
frontend_uniapp/: manifest.json
frontend_uniapp/pages/index/: index.uvue
frontend_web/: README.md  package.json
